# vidalia

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CREDITS  HACKING  INSTALL  LICENSE  README  README.breakpad  README.geoip  README.marble  Vidalia.pro  Vidalia.qc  VidaliaMacros.cmake  autogen.sh  config.h.in  configure  configure.in  makedist.sh
pkg/: CMakeLists.txt  build-geoip-cache.sh  geoip-cache  makedist.sh  package.sh
pkg/osx/: CMakeLists.txt  InstallTorbutton.scpt.in  MacOSXBundleInfo.plist.in  PrivoxyConfPostFlight  TorPostFlight  VidaliaBundleInfo.plist.in  VidaliaBundleWelcome.rtf  VidaliaDesc.plist.in  build-bundle.txt  builddmg.sh  builddmg.sh.in  buildmpkg.sh.in  bundle-ds_store  default.action  nonbundle-ds_store  privoxy.config  qt.conf  vidalia.conf.sample
pkg/rpm/: CMakeLists.txt  vidalia.spec  vidalia.spec.in
pkg/win32/: BUNDLE_LICENSE  CMakeLists.txt  License.rtf  WixUI_Custom.wxs  bridge-bundle.nsi.in  build-bundle-installer.txt  build-bundle.txt  build-vidalia-installer.txt  default.action  firefox-warning.ini  ioFile.ini  mktransform.vbs  polipo.conf  polipo.wxs.in  privoxy.config  thandy.wxs.in  tor.wxs.in  torbutton.wxs.in  vidalia-bundle.nsi  vidalia-bundle.nsi.in  vidalia-debug.nsi  vidalia.nsi  vidalia.nsi.in  vidalia.pot  vidalia.wxs.in  vidalia_cs.nsh  vidalia_de.nsh  vidalia_en.nsh  vidalia_es.nsh  vidalia_fa.nsh  vidalia_fi.nsh  vidalia_fr.nsh  vidalia_he.nsh  vidalia_it.nsh  vidalia_nl.nsh  vidalia_pl.nsh  vidalia_pt-br.nsh  vidalia_ro.nsh  vidalia_ru.nsh  vidalia_sv.nsh  (+2 more)
src/: CMakeLists.txt  Vidalia.pro  main.cpp  src.pri  vidalia.cpp  vidalia.h  vidalia.pro
src/common/: CMakeLists.txt  CountryInfo.cpp  CountryInfo.h  Log.cpp  Log.h  TorSocket.cpp  TorSocket.h  TorSslSocket.cpp  TorSslSocket.h  ZlibByteArray.cpp  ZlibByteArray.h  countryinfo.cpp  countryinfo.h  crypto.cpp  crypto.h  file.cpp  file.h  html.cpp  html.h  log.h  net.cpp  net.h  process.cpp  process.h  procutil.cpp  procutil.h  stringutil.cpp  stringutil.h  torsocket.h  torsslsocket.cpp  win32.cpp  win32.h  zlibbytearray.h
src/config/: abstracttorsettings.cpp  abstracttorsettings.h  config.pri  exitpolicy.cpp  exitpolicy.h  messagetypes.h  networksettings.cpp  networksettings.h  policy.cpp  policy.h  serversettings.cpp  serversettings.h  torsettings.cpp  torsettings.h  vidaliasettings.cpp  vidaliasettings.h  vsettings.cpp  vsettings.h
src/control/: addressmap.cpp  addressmap.h  addressmapevent.h  bandwidthevent.cpp  bandwidthevent.h  circuit.cpp  circuit.h  circuitestablishedevent.h  circuitevent.cpp  circuitevent.h  clientstatusevent.h  control.pri  controlcommand.cpp  controlcommand.h  controlconnection.cpp  controlconnection.h  controlreply.cpp  controlreply.h  controlsocket.cpp  controlsocket.h  dangerousversionevent.cpp  dangerousversionevent.h  eventtype.h  logevent.cpp  logevent.h  messagepump.cpp  messagepump.h  newdescriptorevent.cpp  newdescriptorevent.h  orconnevent.cpp  orconnevent.h  protocolinfo.cpp  protocolinfo.h  replyline.cpp  replyline.h  routerdescriptor.cpp  routerdescriptor.h  serverstatusevent.cpp  statusevent.h  stream.cpp  (+15 more)
src/crashreporter/: CMakeLists.txt  CrashReportDialog.cpp  CrashReportDialog.h  CrashReportDialog.ui  CrashReportUploader.cpp  CrashReportUploader.h  UploadProgressDialog.cpp  UploadProgressDialog.h  UploadProgressDialog.ui  main.cpp
src/geoip/: geoip.pri  geoip.qrc  geoipcache.cpp  geoipcacheitem.cpp  geoipcacheitem.h  geoipresolver.cpp  geoipresolver.h
src/gui/: about.cpp  about.h  aboutdialog.ui  gui.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagelog.cpp  messagelog.h  messagelog.ui  vidalia.cpp  vidalia.h  vidaliawindow.h
src/lang/: lang.pri  lang.qrc  languagesupport.cpp  languagesupport.h  vidalia_ar.ts  vidalia_bg.ts  vidalia_cs.ts  vidalia_de.ts  vidalia_en.ts  vidalia_es.ts  vidalia_fa.ts  vidalia_fi.ts  vidalia_fr.ts  vidalia_hu.ts  vidalia_it.ts  vidalia_nb.ts  vidalia_nl.ts  vidalia_pl.ts  vidalia_pt.ts  vidalia_ru.ts  vidalia_sv.ts  vidalia_zh-cn.ts  vidalia_zh-tw.ts  vidalia_zh.ts
src/miniupnpc/: CMakeLists.txt  connecthostport.c  miniupnpc.c  miniupnpcstrings.h  miniwget.c  upnpcommands.h  upnpreplyparse.h
src/tests/: CMakeLists.txt  TorrcTest.cpp  Torrctest.h  testMain.cpp
src/tools/: CMakeLists.txt
src/torcontrol/: AddressMap.cpp  AddressMap.h  AddressMapEvent.h  BandwidthEvent.h  BootstrapStatus.cpp  BootstrapStatus.h  BootstrapStatusEvent.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitEstablishedEvent.h  CircuitEvent.h  ClientStatusEvent.cpp  ClientStatusEvent.h  ControlCommand.cpp  ControlCommand.h  ControlConnection.cpp  ControlConnection.h  ControlMethod.cpp  ControlMethod.h  ControlReply.cpp  ControlReply.h  ControlSocket.cpp  ControlSocket.h  DangerousPortEvent.cpp  DangerousPortEvent.h  DangerousVersionEvent.cpp  DangerousVersionEvent.h  GeneralStatusEvent.cpp  GeneralStatusEvent.h  LogEvent.cpp  LogEvent.h  NewDescriptorEvent.h  OrConnEvent.cpp  OrConnEvent.h  ProtocolInfo.cpp  ProtocolInfo.h  ReplyLine.cpp  ReplyLine.h  RouterDescriptor.cpp  (+93 more)
src/util/: CMakeLists.txt  compat.cpp  compat.h  crypto.cpp  crypto.h  file.cpp  file.h  html.cpp  html.h  http.cpp  http.h  log.cpp  log.h  net.cpp  net.h  process.cpp  process.h  process_nix.cpp  process_win.cpp  registry.cpp  registry.h  string.cpp  string.h  stringutil.cpp  stringutil.h  torsocket.cpp  torsocket.h  torsslsocket.cpp  torsslsocket.h  util.pri  win32.cpp  win32.h  zlibbytearray.cpp  zlibbytearray.h
src/vidalia/: CMakeLists.txt  ControlPasswordInputDialog.cpp  ControlPasswordInputDialog.h  ControlPasswordInputDialog.ui  CrashReporter.cpp  CrashReporter.h  FirstRunWizard.cpp  FirstRunWizard.h  HelperProcess.cpp  HelperProcess.h  LanguageSupport.cpp  LanguageSupport.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PackageInfo.cpp  PackageInfo.h  StatusTab.cpp  StatusTab.h  StatusTab.ui  UpdateProcess.cpp  UpdateProcess.h  UpdateProgressDialog.cpp  UpdateProgressDialog.h  UpdateProgressDialog.ui  UpdatesAvailableDialog.cpp  UpdatesAvailableDialog.h  UpdatesAvailableDialog.ui  VAttachButton.cpp  VAttachButton.h  (+49 more)
(+1859 files in other folders)
